Created a js function for loading Book Information according to user search query, created js function for converting author key into author name, Added comments on previous codes for readability

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bookworm",
   "version": "1.0.0",
-  "description": "A simple webpage for getting book information.",
-  "main": "index.js",
+  "description": "A simple website for getting book information, adding bookmarks and writting notes",
+  "main": "bookworm.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
