Changed build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bookworm.js",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Prabin Shrestha",
   "license": "ISC",
